# climbing-science

./: .gitignore  404.html  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  PLAN.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  references.bib  sitemap.xml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml  publish.yml
api/adapter_manual/: index.html
api/adapter_tindeq/: index.html
api/diagnostics/: index.html
api/edge_depth/: index.html
api/endurance/: index.html
api/frontend_notebook/: index.html
api/grades/: index.html
api/io/: index.html
api/load/: index.html
api/models/: index.html
api/periodization/: index.html
api/protocols/: index.html
api/signal/: index.html
api/strength/: index.html
changelog/: index.html
design/: index.html
docs/: changelog.md  design.md  index.md  references.bib  references.md  requirements.md
docs/api/: adapter_manual.md  adapter_tindeq.md  diagnostics.md  edge_depth.md  endurance.md  frontend_notebook.md  grades.md  io.md  load.md  models.md  periodization.md  protocols.md  signal.md  strength.md
docs/science/: critical-force.md  edge-depth.md  grade-conversion.md  rohmert-curve.md  signal-processing.md
docs/user-guide/: getting-started.md  grade-prediction.md  hangboard-training.md
examples/: grade_conversion.py
notebooks/: 01_my_climbing_assessment.ipynb  02_rohmert_curve_explained.ipynb  03_critical_force_analysis.ipynb  04_protocol_comparison.ipynb  05_session_deep_dive.ipynb  06_progress_tracker.ipynb  07_edge_depth_science.ipynb  grade_conversion.ipynb
references/: index.html
requirements/: index.html
science/critical-force/: index.html
science/edge-depth/: index.html
science/grade-conversion/: index.html
science/rohmert-curve/: index.html
science/signal-processing/: index.html
scripts/: check_citations.py
search/: search_index.json
src/climbing_science/: __init__.py  diagnostics.py  edge_depth.py  endurance.py  grades.py  io.py  load.py  models.py  periodization.py  protocols.py  signal.py  strength.py
src/climbing_science/adapters/: __init__.py  manual.py  tindeq.py
src/climbing_science/frontends/: __init__.py  cli.py  notebook.py
tests/: conftest.py  test_adapter_manual.py  test_adapter_tindeq.py  test_basic.py  test_citations.py  test_cli.py  test_diagnostics.py  test_edge_depth.py  test_endurance.py  test_frontend_notebook.py  test_grades.py  test_io.py  test_load.py  test_models.py  test_periodization.py  test_protocols.py  test_signal.py  test_strength.py
user-guide/getting-started/: index.html
user-guide/grade-prediction/: index.html
user-guide/hangboard-training/: index.html
