[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "climbing-science"
version = "0.3.3"
description = "Open-source Python library for evidence-based climbing training analysis"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.9"
authors = [
    { name = "Gerolf Ziegenhain", email = "gerolf.ziegenain@gmail.com" },
]
keywords = [
    "climbing",
    "science",
    "hangboard",
    "bouldering",
    "finger-strength",
    "training",
    "sports-science",
    "critical-force",
    "periodization",
    "mvc",
    "rohmert",
    "grade-conversion",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "eval_type_backport>=0.2.0; python_version < '3.10'",
]

[project.optional-dependencies]
plot = [
    "matplotlib>=3.8",
]
notebooks = [
    "matplotlib>=3.8",
    "pandas>=2.0",
    "jupyter>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "bump-my-version>=0.24",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "mkdocs-bibtex>=2.16",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "mkdocs-bibtex>=2.16",
]

[project.urls]
Homepage = "https://github.com/8cH9azbsFifZ/climbing-science"
Repository = "https://github.com/8cH9azbsFifZ/climbing-science"
Documentation = "https://8cH9azbsFifZ.github.io/climbing-science/"
Issues = "https://github.com/8cH9azbsFifZ/climbing-science/issues"
Changelog = "https://github.com/8cH9azbsFifZ/climbing-science/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=climbing_science --cov-report=term-missing"

[tool.bumpversion]
current_version = "0.3.3"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
commit = true
tag = true
tag_name = "v{new_version}"
message = "Release {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/climbing_science/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
